--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -1,10 +1,17 @@
+$BlackBack : #242424
+$Orange : #FC7216
+$Black2 : #1E1E1E
+$Green : #02C436
+$Blue : #02527B
+$border : #707070
 body
   margin : 0
-  background : black 
+  background : $BlackBack
 html
   margin : 0 
 code
     font-family : source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+
 
 @font-face 
   font-family : Hack
@@ -25,7 +32,7 @@ code
   position : absolute
   top : 0
   left : 0
-  background : #202020
+  background : $BlackBack
   height : 100%
   width : 100% 
   overflow : hidden
@@ -35,7 +42,7 @@ code
   position : absolute
   top : 0
   left : 0
-  background : #e66700
+  background : $Orange
   height : 100%
   width : 100% 
   overflow : hidden
@@ -55,9 +62,6 @@ code
     object-fit : cover
     filter : blur(5px)
     transition : 0.3s 
-    &:hover
-      transform : scale(1.2)
-      filter : blur(10px)
   div  
     font-size : 45px
     position : absolute
@@ -66,6 +70,7 @@ code
     margin : auto
     color : white
     text-shadow : #0000001f
+    transition : 0.3s 
     h1
       margin-top : 0
       margin-bottom : 0 
@@ -74,6 +79,13 @@ code
       width : 100%
       text-align : right    
       font-family : HackL
+  &:hover
+    img
+      transform : scale(1.2)
+      filter : blur(10px)
+    div
+      animation : glide1  3s infinite ease-in-out   
+      transition : 0.3s 
 
 .Desdiv
   margin : 0
@@ -91,10 +103,7 @@ code
     object-fit : cover 
     overflow : hidden 
     filter : blur(5px)   
-    transition : 0.3s 
-    &:hover
-      transform : scale(1.2)
-      filter : blur(10px)
+    transition : 0.3s
   div
     width : 23%
     font-size : 45px
@@ -112,7 +121,97 @@ code
       width : 100%
       text-align : right 
       font-family : NexaL
+  &:hover
+    img
+      transform : scale(1.2)
+      filter : blur(10px)
+    div
+      animation : glide2  3s infinite ease-in-out   
+      transition : 0.3s 
 
+
+.LoadingB
+  position : absolute
+  top : 0
+  height : 100vh
+  width : 100%
+  z-index : 3
+  background : #202020
+  .centralContainer 
+    position : absolute
+    top : 35%
+    left : 35%
+    width : 30%
+    height : 30% 
+    display : grid
+    grid-template-rows : 30% 30% auto 
+    color : white
+    h1 
+      font-family : Hack 
+      margin : auto
+      text-align : center
+    img
+      margin : auto
+      width : 80px
+    p  
+      font-family : HackL
+      margin : 5%
+      text-align : center    
+.Orange
+    color : white 
+    background : $Orange
+    .centralContainer 
+      h1
+        font-family : Nexa
+      p
+        font-family : NexaL 
+
+@mixin ButtonBlack()
+  font-family : Hack
+  background : $Black2
+  border : solid 1px $border  
+  color : white
+  border-radius : 7px
+  width : 150px
+  height : 50px
+  transition : 0.3s ease-in-out
+  &:focus
+    outline : none
+  &:hover
+    cursor : pointer
+    background : $BlackBack 
+
+  
+
+//Dev
+.DevPage
+  font-family : Hack
+  color : white
+  width : 100%
+  .navbar 
+    background : $Black2
+    height : 150px 
+    width : 100%
+    display : flex
+    flex-direction : raw 
+    button 
+      @include ButtonBlack()
+    
+  button  
+    @include ButtonBlack()
+    
+  
+
+
+@keyframes float
+  0% 
+    transform: translatey(0px);
+  
+  50% 
+    transform: translatey(-20px);
+  
+  100% 
+    transform: translatey(0px); 
 
 
 @keyframes glide1
@@ -140,3 +239,4 @@ code
     animation : glide1  3s infinite ease-in-out
 .gliding2
     animation : glide2  3s infinite ease-in-out
+
