--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -7,6 +7,7 @@ $border : #707070
 $GreenH : #1aa510
 $borderG : #118109
 $borderO : #cc5200
+$gold : #f5b400
 body
   margin : 0
   background : $BlackBack
@@ -191,7 +192,7 @@ code
     
 @mixin ButtonGreen()
   background : $Green
-  border : solid 4px $borderG  
+  border : solid 4px $borderG 
   &:focus
     outline : none
   &:hover
@@ -216,18 +217,20 @@ code
     height : 150px 
     width : 100%
     display : grid
-    grid-template-columns : 25%  auto  10%
+    grid-template-columns : 25%  auto 10%
     *
       margin : auto
     h1
       text-align : right 
-      width : 80%
+      width : 60%
     .buttons
       width : 100%
       display : block
       margin : auto
       button
-        margin : 0  2%
+        margin : 0  1%
+      .Green
+        margin-left : 5%
     .todesign
       position : absolute
       right : 5px
@@ -250,7 +253,14 @@ code
   .Green
     @include ButtonGreen()
     
-  
+.Container
+  width : 100%
+
+.main
+  width : 100%
+  height : 100vh 
+  .summary
+
 
 
 @keyframes float
@@ -290,3 +300,15 @@ code
 .gliding2
     animation : glide2  3s infinite ease-in-out
 
+
+::-webkit-scrollbar 
+  width : 8px;
+  transition : 0.3s ease-in-out
+::-webkit-scrollbar-track 
+  background : $Black2
+  transition : 0.3s ease-in-out
+::-webkit-scrollbar-thumb 
+  background : black;
+  border-radius : 5px 
+::-webkit-scrollbar-thumb:hover 
+  background : $gold;
