--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -1,13 +1,14 @@
-$BlackBack : #242424
-$Orange : #FC7216
-$Black2 : #1E1E1E
-$Green : #02C436
-$Blue : #02527B
-$border : #707070
-$GreenH : #1aa510
-$borderG : #118109
-$borderO : #cc5200
-$gold : #f5b400
+
+//imports
+@import './Styles/Annimations'
+@import './Styles/Buttons'
+@import './Styles/Colors'
+@import './Styles/Scrollbar'
+@import './Styles/Homestyle'
+@import './Styles/Devside'
+@import './Styles/loading'
+@import './Styles/Fonts'
+
 body
   margin : 0
   background : $BlackBack
@@ -17,298 +18,9 @@ code
     font-family : source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 
 
-@font-face 
-  font-family : Hack
-  src : url("./assets/fonts/Hack-Bold.ttf")
-@font-face 
-  font-family : HackL
-  src : url("./assets/fonts/Hack-Regular.ttf")
-@font-face 
-  font-family : Nexa
-  src : url("./assets/fonts/Nexa Bold.otf")
-@font-face 
-  font-family : NexaL
-  src : url("./assets/fonts/Nexa Light.otf")
   
 
-.bord1
-  clip-path : polygon(44% 0, 46% 0, 56% 100%, 54% 100%);
-  position : absolute
-  top : 0
-  left : 0
-  background : $BlackBack
-  height : 100%
-  width : 100% 
-  overflow : hidden
-  transition : 0.3s 
-.bord2
-  clip-path : polygon(45% 0, 46% 0, 56% 100%, 55% 100%);
-  position : absolute
-  top : 0
-  left : 0
-  background : $Orange
-  height : 100%
-  width : 100% 
-  overflow : hidden
-  transition : 0.3s 
-.Devdiv
-  margin : 0
-  font-family : Hack 
-  position : absolute
-  overflow : hidden
-  left : 0
-  height : 100%
-  width : 100%
-  clip-path : polygon(0 0, 45% 0, 56% 100%, 0% 100%)
-  img
-    width : 100% 
-    overflow : hidden  
-    object-fit : cover
-    filter : blur(5px)
-    transition : 0.3s 
-  div  
-    font-size : 45px
-    position : absolute
-    top : 40%
-    left : 10%
-    margin : auto
-    color : white
-    text-shadow : #0000001f
-    transition : 0.3s 
-    h1
-      margin-top : 0
-      margin-bottom : 0 
-    h3
-      margin-top : 2% 
-      width : 100%
-      text-align : right    
-      font-family : HackL
-  &:hover
-    img
-      transform : scale(1.2)
-      filter : blur(10px)
-    div
-      animation : glide1  3s infinite ease-in-out   
-      transition : 0.3s 
-
-.Desdiv
-  margin : 0
-  font-family : Nexa 
-  position : absolute
-  overflow : hidden
-  right : 0
-  height : 100%
-  width : 100%
-  border-bottom-left-radius : 800px   
-  clip-path : polygon(45% 0, 100% 0, 100% 100%, 55% 100%);
-  img
-    display : block 
-    width : 100% 
-    object-fit : cover 
-    overflow : hidden 
-    filter : blur(5px)   
-    transition : 0.3s
-  div
-    width : 23%
-    font-size : 45px
-    position : absolute
-    top : 40%
-    left : 65%
-    margin : auto
-    color : white
-    text-shadow : #0000001f
-    h1
-      margin-top : 0
-      margin-bottom : 0 
-    h3
-      margin-top : 2% 
-      width : 100%
-      text-align : right 
-      font-family : NexaL
-  &:hover
-    img
-      transform : scale(1.2)
-      filter : blur(10px)
-    div
-      animation : glide2  3s infinite ease-in-out   
-      transition : 0.3s 
-
-
-.LoadingB
-  position : absolute
-  top : 0
-  height : 100vh
-  width : 100%
-  z-index : 3
-  background : #202020
-  .centralContainer 
-    position : absolute
-    top : 35%
-    left : 35%
-    width : 30%
-    height : 30% 
-    display : grid
-    grid-template-rows : 30% 30% auto 
-    color : white
-    h1 
-      font-family : Hack 
-      margin : auto
-      text-align : center
-    img
-      margin : auto
-      width : 80px
-    p  
-      font-family : HackL
-      margin : 5%
-      text-align : center    
-.Orange
-    color : white 
-    background : $Orange
-    .centralContainer 
-      h1
-        font-family : Nexa
-      p
-        font-family : NexaL 
-
-@mixin ButtonBlack()
-  font-family : Hack
-  font-size : 100%
-  background : $Black2
-  border : solid 1px $border  
-  color : white
-  border-radius : 7px
-  width : 120px
-  height : 45px
-  transition : 0.25s ease-in-out
-  &:focus
-    outline : none
-  &:hover
-    cursor : pointer
-    background : $BlackBack 
-    border : solid 4px black
-  &:active
-    background : black
-    transform : scale(0.9) 
-    
-@mixin ButtonGreen()
-  background : $Green
-  border : solid 4px $borderG 
-  &:focus
-    outline : none
-  &:hover
-    cursor : pointer
-    background : $GreenH
-    border : solid 4px $borderG  
-  &:active
-    background : $borderG
-
-  
-
-//Dev
-.DevPage
-  font-family : Hack
-  color : white
-  width : 100%
-  .navbar 
-    position : fixed
-    padding-inline-end : 1% 
-    padding-inline-start : 1%
-    background : $Black2
-    height : 150px 
-    width : 100%
-    display : grid
-    grid-template-columns : 25%  auto 10%
-    *
-      margin : auto
-    h1
-      text-align : right 
-      width : 60%
-    .buttons
-      width : 100%
-      display : block
-      margin : auto
-      button
-        margin : 0  1%
-      .Green
-        margin-left : 5%
-    .todesign
-      position : absolute
-      right : 5px
-      top : 34%
-      button 
-        width : 50px
-        background : $Orange
-        border : 0
-        padding-left : 50% 
-        &:hover
-          border : solid 4px $borderO
-          width : 200px
-          padding-left : 0
-          
-        &:active
-          background : $borderO
-           
-  button  
-    @include ButtonBlack()
-  .Green
-    @include ButtonGreen()
-    
-.Container
-  width : 100%
-
-.main
-  width : 100%
-  height : 100vh 
-  .summary
 
 
 
-@keyframes float
-  0% 
-    transform: translatey(0px);
-  
-  50% 
-    transform: translatey(-20px);
-  
-  100% 
-    transform: translatey(0px); 
 
-
-@keyframes glide1
-	0% 
-		transform: translatex(0px);
-	
-	50% 
-		transform: translatex(-20px);
-	
-	100% 
-		transform: translatex(0px);
- 
-@keyframes glide2
-	0% 
-		transform: translatex(0px);
-	
-	50% 
-		transform: translatex(20px);
-	
-	100% 
-		transform: translatex(0px);
-	
-
-.gliding1
-    animation : glide1  3s infinite ease-in-out
-.gliding2
-    animation : glide2  3s infinite ease-in-out
-
-
-::-webkit-scrollbar 
-  width : 8px;
-  transition : 0.3s ease-in-out
-::-webkit-scrollbar-track 
-  background : $Black2
-  transition : 0.3s ease-in-out
-::-webkit-scrollbar-thumb 
-  background : black;
-  border-radius : 5px 
-::-webkit-scrollbar-thumb:hover 
-  background : $gold;
