Fix : structuring Dev Side

--- a/client/src/Styles/Devside.sass
+++ b/client/src/Styles/Devside.sass
@@ -1,9 +1,11 @@
 
 //Dev
 .DevPage
+  z-index : 1300
   font-family : Hack
   color : white
   width : 100%
+  background : $BlackBack  
   .navbar 
     position : fixed
     padding-inline-end : 1% 
