--- a/client/src/Styles/Homestyle.sass
+++ b/client/src/Styles/Homestyle.sass
@@ -19,6 +19,7 @@
   overflow : hidden
   transition : 0.3s 
 .Devdiv
+  cursor : pointer 
   margin : 0
   font-family : Hack 
   position : absolute
@@ -55,10 +56,14 @@
       transform : scale(1.2)
       filter : blur(10px)
     div
-      animation : glide1  3s infinite ease-in-out   
-      transition : 0.3s 
+      h1
+        animation : glide1  3s infinite ease-in-out 
+      h3
+        animation : glide2 3s infinite ease-in-out
+    
 
 .Desdiv
+  cursor : pointer 
   margin : 0
   font-family : Nexa 
   position : absolute
@@ -84,6 +89,7 @@
     margin : auto
     color : white
     text-shadow : #0000001f
+    transition : 0.3s
     h1
       margin-top : 0
       margin-bottom : 0 
@@ -97,6 +103,8 @@
       transform : scale(1.2)
       filter : blur(10px)
     div
-      animation : glide2  3s infinite ease-in-out   
-      transition : 0.3s 
+      h1
+        animation : glide2  3s infinite ease-in-out 
+      h3
+        animation : glide1 3s infinite ease-in-out
 
