--- a/client/src/Styles/loading.sass
+++ b/client/src/Styles/loading.sass
@@ -1,10 +1,10 @@
 
 .LoadingB
-  position : absolute
+  position : fixed
   top : 0
   height : 100vh
   width : 100%
-  z-index : 3
+  z-index : 5 
   background : #202020
   .centralContainer 
     position : absolute
