Fix : Navbar style

--- a/client/src/Styles/Buttons.sass
+++ b/client/src/Styles/Buttons.sass
@@ -1,13 +1,13 @@
 
 @mixin ButtonBlack()
   font-family : Hack
-  font-size : 100%
+  font-size : 90%
   background : $Black2
-  border : solid 1px $border  
+  border : solid 1.5px $border  
   color : white
   border-radius : 7px
-  width : 120px
-  height : 45px
+  min-width : 100px
+  height : 40px
   transition : 0.25s ease-in-out
   &:focus
     outline : none
