--- a/client/src/Styles/Homestyle.sass
+++ b/client/src/Styles/Homestyle.sass
@@ -57,6 +57,7 @@
       transform : scale(1.2)
       filter : blur(10px)
     div
+      transform : scale(1.2) 
       h1
         animation : glide1  3s infinite ease-in-out 
       h3
@@ -104,6 +105,7 @@
       transform : scale(1.2)
       filter : blur(10px)
     div
+      transform : scale(1.2) 
       h1
         animation : glide2  3s infinite ease-in-out 
       h3
