--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -12,7 +12,91 @@
 body
   margin : 0
   background : $BlackBack
+  overflow-x : hidden 
 html
   margin : 0 
 code
     font-family : source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+
+//after to be moved to seperated file
+
+$ContBlack : #202020
+$ContBorder : #161616    
+
+
+.Container
+  width : 100%
+
+
+@mixin Contain()
+  background : $ContBlack
+  border : solid 3px $ContBorder 
+  border-radius : 20px 
+  
+.Title
+  position : relative
+  top : 0
+  left : 0
+  width : auto
+  font-size : 3rem
+  animation : glide1 3s ease-in-out infinite
+.main
+  width : 100%
+  height : 100vh 
+  display : grid
+  grid-template-columns : 30% auto 25%  
+  .summary
+    font-size : 10pt
+    margin : auto
+    @include Contain()
+    width : 50%
+    height : 60%
+    margin-right : 5%
+    .imgholder
+      width : 100%
+      img
+        width : 100%
+      h4
+        font-family : Hack 
+        width : 100%
+        text-align : center
+        margin-bottom : 5%
+      h3
+        width : 90%
+        text-align : right
+        margin-top : 0
+    .placehold
+      display : flex
+      margin : auto
+      width : 100%
+      img 
+        height : 18px
+        margin : auto
+    .badgeBlack
+      background : black
+      border : solid 4px $border 
+      border-radius : 12px 
+      width : 80%
+      margin : auto
+      margin-bottom : 3%
+      p
+        text-align : center
+        margin : 2%
+    .badgeGreen
+      background : $Green
+      border : solid 4px $borderG 
+      border-radius : 12px 
+      width : 35%
+      margin : auto
+      margin-bottom : 2%
+      p
+        text-align : center
+        margin : 2%
+  .bio
+    margin : auto
+    @include Contain()
+    width : 100%
+    height : 60%
+    margin-left : 5%
+  
+    
