Fix : Navbar back filter

--- a/client/src/Styles/Devside.sass
+++ b/client/src/Styles/Devside.sass
@@ -8,7 +8,9 @@
   background : $BlackBack  
   .navbar 
     position : fixed
-    background : $Black2
+    background : #1e1e1eb4
+    
+    backdrop-filter : blur(10px)
     height : 100px 
     width : 100%
     display : grid
