--- a/client/src/Styles/Devside.sass
+++ b/client/src/Styles/Devside.sass
@@ -9,15 +9,16 @@
   .navbar 
     position : fixed
     background : #1e1e1eb4
-    
+    transition : 0.25s ease-in-out
     backdrop-filter : blur(10px)
-    height : 100px 
+    height : 100px
     width : 100%
     display : grid
     grid-template-columns : 25%  50%  10% 15%
     *
       margin : auto
     h1
+      transition : 0.25s ease-in-out
       margin : auto
       margin-right : 0 
     .buttons
@@ -39,11 +40,35 @@
         &:hover
           border : solid 4px $borderO
           right : -10px
-        
         &:active
           background : $borderO
-           
+      
+         
   button  
     @include ButtonBlack()
   .Green
     @include ButtonGreen()
+
+  .navbarto
+    backdrop-filter : blur(10px)
+    height : 80px
+    *
+      opacity : 0.8
+      transition : 0.3s 
+      &:hover
+          opacity : 1
+    h1
+      transform : scale(0.8)
+      color : #ffffff20
+    .buttons
+      button
+        transform : scale(0.9)
+    button
+      &:active
+        transform : scale(0.8)
+    .Green
+      transform : scale(0.9)
+    .todesign
+      button
+        transform : scale(0.9)
+        top : 20px
