--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -44,14 +44,14 @@ $ContBorder : #161616
   width : 100%
   height : 100vh 
   display : grid
-  grid-template-columns : 30% auto 25%  
+  grid-template-columns : 30% auto 20%  
   .summary
     font-size : 10pt
     margin : auto
     @include Contain()
     width : 50%
     height : 60%
-    margin-right : 5%
+    margin-right : 0
     .imgholder
       width : 100%
       img
@@ -97,6 +97,25 @@ $ContBorder : #161616
     @include Contain()
     width : 100%
     height : 60%
-    margin-left : 5%
-  
-    
+    margin-left : 10%
+    padding-left : 5%
+    h1
+      margin-top : 5%
+    .textp
+      font-size : 170% 
+      height : 35%
+      text-align : left
+      line-height : 200% 
+      font-family : HackL
+      font-weight : light  
+    .cardholder
+      display : flex
+      width : 95%
+      .card
+        background : black
+        width :  100px
+        height : 50px
+        border-radius : 5px
+        text-align : center
+        margin : auto
+        padding : auto 
