Fix : Main style

--- a/client/src/Styles/Devside.sass
+++ b/client/src/Styles/Devside.sass
@@ -8,6 +8,7 @@
   background : $BlackBack  
   .navbar 
     position : fixed
+    z-index : 50 
     background : #1e1e1eb4
     transition : 0.25s ease-in-out
     backdrop-filter : blur(10px)
