--- a/client/src/Styles/Homestyle.sass
+++ b/client/src/Styles/Homestyle.sass
@@ -35,7 +35,7 @@
     filter : blur(5px)
     transition : 0.3s 
   div  
-    font-size : 40px
+    font-size : 4.5vh
     position : absolute
     top : 40%
     left : 10%
@@ -83,7 +83,7 @@
     filter : blur(5px)   
     transition : 0.3s
   div
-    font-size : 40px
+    font-size : 4.5vh
     position : absolute
     top : 40%
     left : 62%
