--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -30,15 +30,15 @@ $ContBorder : #161616
 
 @mixin Contain()
   background : $ContBlack
-  border : solid 3px $ContBorder 
-  border-radius : 20px 
+  border : solid 0.4vh $ContBorder 
+  border-radius : 2vh
   
 .Title
   position : relative
   top : 0
   left : 0
   width : auto
-  font-size : 3rem
+  font-size : 5vh
   animation : glide1 3s ease-in-out infinite
 .main
   width : 100%
@@ -46,7 +46,7 @@ $ContBorder : #161616
   display : grid
   grid-template-columns : 30% auto 20%  
   .summary
-    font-size : 10pt
+    font-size : 2vh
     margin : auto
     @include Contain()
     width : 50%
@@ -57,25 +57,33 @@ $ContBorder : #161616
       img
         width : 100%
       h4
+        position : relative 
+        top : -10vh
         font-family : Hack 
         width : 100%
         text-align : center
         margin-bottom : 5%
       h3
+        position : relative 
+        top : -10vh
         width : 90%
         text-align : right
         margin-top : 0
     .placehold
+      position : relative 
+      top : -10vh
       display : flex
       margin : auto
       width : 100%
       img 
-        height : 18px
+        height : 2vh
         margin : auto
     .badgeBlack
+      position : relative 
+      top : -10vh
       background : black
-      border : solid 4px $border 
-      border-radius : 12px 
+      border : solid 0.3vh $border 
+      border-radius : 1vh
       width : 80%
       margin : auto
       margin-bottom : 3%
@@ -83,40 +91,64 @@ $ContBorder : #161616
         text-align : center
         margin : 2%
     .badgeGreen
+      position : relative 
+      top : -10vh
       background : $Green
-      border : solid 4px $borderG 
-      border-radius : 12px 
-      width : 35%
+      border : solid 0.3vh $borderG 
+      border-radius : 1vh 
+      width : 80%
       margin : auto
       margin-bottom : 2%
       p
         text-align : center
         margin : 2%
+    .Title
+      position : relative 
+      top : -10vh
+      left : 12vh
   .bio
     margin : auto
     @include Contain()
     width : 100%
     height : 60%
     margin-left : 10%
-    padding-left : 5%
-    h1
-      margin-top : 5%
-    .textp
-      
-      font-size : 170% 
-      height : 35%
-      text-align : left
-      line-height : 200% 
-      font-family : HackL
-      font-weight : light  
-    .cardholder
-      display : flex
-      width : 95%
-      .card
-        background : black
-        width :  100px
-        height : 50px
-        border-radius : 5px
+    .bioctn
+      width : 85%
+      height : 100%
+      margin :  auto 
+      display : grid
+      grid-template-rows : 25% 40% 25% 10%
+      h1
+        font-size : 4vh
+        margin-top : auto
+      .textp
+        font-size : 2.5vh
+        display : flex
+        text-align : left
+        margin-top : auto
+        line-height : 200% 
+        font-family : HackL
+        font-weight : light  
+      .cardholder
+        display : flex
+        width : 95%
+        animation : float  5s infinite ease-in-out
+        .card
+          background : black
+          width :  11vh
+          height : 6vh
+          border-radius : 5px
+          text-align : center
+          margin : auto
+          padding : auto 
+          p
+            font-size :  1.9vh
+      .sub
         text-align : center
         margin : auto
-        padding : auto 
+        font-size :  1.5vh
+    .Title
+      position : relative 
+      top : -6vh
+      left : 90vh
+
