--- a/client/src/Styles/Annimations.sass
+++ b/client/src/Styles/Annimations.sass
@@ -30,6 +30,29 @@
 	100% 
 		transform: translatex(0px);
 	
+@keyframes showside
+  0% 
+    transform: translatey(0px);
+  20% 
+    transform: translatey(5px); 
+  40%
+    transform: translatey(0px); 
+  60% 
+    transform: translatey(5px);
+  100% 
+    transform: translatey(0px); 
+	
+@keyframes zoomin
+  0% 
+    transform: scale(1);
+  
+  50% 
+    transform: scale(1.01);
+  
+  100% 
+    transform: scale(1); 
+
+
 
 .gliding1
     animation : glide1  3s infinite ease-in-out
