--- a/client/src/Styles/main.sass
+++ b/client/src/Styles/main.sass
@@ -3,6 +3,12 @@
   border : solid 0.4vh $ContBorder 
   border-radius : 2vh
   
+@mixin GreenBadge()
+  background : $Green
+  border : solid 0.3vh $borderG 
+  border-radius : 1vh 
+  margin : auto
+
 .Title
   position : relative
   top : 0
@@ -19,13 +25,15 @@
     font-size : 2vh
     margin : auto
     @include Contain()
-    width : 50%
+    width : 28.5vh
     height : 60%
     margin-right : 0
     .imgholder
-      width : 100%
+      width : 100% 
+      height : 28.5vh
       img
         width : 100%
+        object-fit : cover
       h4
         position : relative 
         top : -10vh
@@ -40,8 +48,6 @@
         text-align : right
         margin-top : 0
     .placehold
-      position : relative 
-      top : -10vh
       display : flex
       margin : auto
       width : 100%
@@ -49,8 +55,6 @@
         height : 2vh
         margin : auto
     .badgeBlack
-      position : relative 
-      top : -10vh
       background : black
       border : solid 0.3vh $border 
       border-radius : 1vh
@@ -61,11 +65,7 @@
         text-align : center
         margin : 2%
     .badgeGreen
-      position : relative 
-      top : -10vh
-      background : $Green
-      border : solid 0.3vh $borderG 
-      border-radius : 1vh 
+      @include GreenBadge()
       width : 80%
       margin : auto
       margin-bottom : 2%
@@ -74,8 +74,8 @@
         margin : 2%
     .Title
       position : relative 
-      top : -10vh
-      left : 12vh
+      top : 3%
+      left : 40%
   .bio
     margin : auto
     @include Contain()
@@ -121,5 +121,5 @@
         animation-delay : 5s 
     .Title
       position : relative 
-      top : -6vh
-      left : 90vh
+      top : -11%
+      left : 95%
