Feat : Skills part 1

--- a/client/src/Styles/Buttons.sass
+++ b/client/src/Styles/Buttons.sass
@@ -28,5 +28,6 @@
     cursor : pointer
     background : $GreenH
     border : solid 4px $borderG  
+    animation : none
   &:active
     background : $borderG
