--- a/client/src/Styles/Annimations.sass
+++ b/client/src/Styles/Annimations.sass
@@ -33,12 +33,16 @@
 @keyframes showside
   0% 
     transform: translatey(0px);
-  20% 
+  30% 
+    transform: translatey(0px); 
+  40% 
     transform: translatey(5px); 
-  40%
+  50%
     transform: translatey(0px); 
   60% 
     transform: translatey(5px);
+  70% 
+    transform: translatey(0px); 
   100% 
     transform: translatey(0px); 
 	
