--- a/client/src/Styles/navbar.sass
+++ b/client/src/Styles/navbar.sass
@@ -56,8 +56,6 @@
     *
       opacity : 0.8
       transition : 0.3s 
-      &:hover
-          opacity : 1
     h1
       transform : scale(0.8)
       color : #ffffff20
@@ -73,3 +71,6 @@
       button
         transform : scale(0.9)
         top : 20px
+    &:hover
+      *
+        opacity : 1
