--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -22,41 +22,101 @@ code
 //after to be moved to seperated file
 
 .Container
-  width : 135vh
+  width : 70%
   margin : auto
+  height : 80vh
 
 .Skills
   @include Contain()
   width : 100%
-  max-height : 60vh
+  height : 65vh
   margin : auto
   display : grid
-  grid-template-columns : auto auto auto
+  grid-template-columns : 33% 33% 34%
   font-size : 1.8vh
   .one
     margin : auto
     display : flex
     width : 100%
+    height : 100%
     flex-direction : column
     .litleholder
+      @include Contain()
+      background : $BlackBack
       width : 30vh
       height : 25vh 
       margin : auto
       display : flex
       flex-direction : column 
-      @include Contain()
+      h1
+        font-size : 130%
+        width : 100%
+        height : 20%
+        text-align : center
+        vertical-align : middle 
+      p
+        width : 100%
+        text-align : center 
+        height : 70%
+        line-height : 4vh 
       .lngholder
         width : 100%
-        margin : auto
+        margin : 1%
         display : flex
         h1
-          font-size : 100% 
+          font-size : 100%
+          width : 50%
+        p
+          line-height : 2.5vh
 
       
   .two
-
+    width : 100%
+    height : 100%
+    background : $LightBlack
+    h1
+      text-align : center
+    .lvlholder
+      width : 60%
+      margin : auto
+      margin-right : 10%
+      margin-bottom : 8% 
+      display : flex
+      flex-direction : row 
+      font-size : 40% 
+      *
+        margin : auto
+    .plngholder
+      display : flex
+      width : 100%
+      *
+        margin : auto
+      img
+        object-fit : cover  
+        height : 2vh
+      .progressbar
+        width : 100%
+        display : flex 
+        .bar
+          width : 20%
+          height : 1vh
+          border-radius : 1vh 
+          margin-left : 1% 
   .three 
-  
+    width : 100%
+    height : 100%
+    display : flex
+    flex-direction : column 
+    .hackerrankbagesholder
+      margin : auto
+      width : 80%
+      img
+        width : 100%
+        object-fit : cover
+    .framworkholder
+      margin : auto
+      display : flex
+      flex-wrap : wrap 
 
 .badgeGreen
   @include GreenBadge()
@@ -72,3 +132,43 @@ code
   p
     margin : auto
     text-align : center
+
+
+.Projects
+  @include Contain()
+  width : 100%
+  height : 65vh
+  margin : auto
+.Career
+  @include Contain()
+  width : 100%
+  height : 65vh
+  margin : auto
+.Links
+  @include Contain()
+  width : 100%
+  height : 65vh
+  margin : auto
+.contct
+  height : 10vh
+  display : flex
+  width : 100% 
+  margin : auto
+  *
+    margin : auto
+    animation : 3s float infinite ease-in-out
+.footer
+  width : 100%
+  height : 10vh
+  background : black
+  display : flex
+  font-size : 1.8vh
+  *
+    margin : auto 
+  p
+    color : gray
+    font-size : 85% 
+    text-align : center
+    font-family : HackL 
+    margin-left :  0
+    margin-right :  0
