Feat : Skills part 2

--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -87,19 +87,22 @@ code
       *
         margin : auto
     .plngholder
-      display : flex
-      width : 100%
+      margin : auto
+      margin-bottom : 7%
+      display : grid
+      grid-template-columns : 40% 60% 
+      width : 80%
       *
         margin : auto
       img
         object-fit : cover  
-        height : 2vh
+        height : 2.5vh
       .progressbar
         width : 100%
         display : flex 
         .bar
           width : 20%
-          height : 1vh
+          height : 0.7vh
           border-radius : 1vh 
           margin-left : 1% 
   .three 
