--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -40,6 +40,7 @@ code
     width : 100%
     height : 100%
     flex-direction : column
+    justify-content : center 
     .litleholder
       @include Contain()
       background : $BlackBack
@@ -76,6 +77,7 @@ code
     background : $LightBlack
     h1
       text-align : center
+      font-size : 180% 
     .lvlholder
       width : 60%
       margin : auto
@@ -108,18 +110,47 @@ code
   .three 
     width : 100%
     height : 100%
-    display : flex
-    flex-direction : column 
+    display : grid
+    grid-template-rows : 50% 50% 
     .hackerrankbagesholder
       margin : auto
-      width : 80%
-      img
+      height : 100%
+      h1
+        text-align : center
         width : 100%
-        object-fit : cover
+        font-size : 160% 
+      .imgctn
+        height : 20vh
+        width : 29vh
+        margin : auto
+        img
+          width : 100%
+          object-fit : cover
     .framworkholder
       margin : auto
       display : flex
-      flex-wrap : wrap 
+      flex-direction : column  
+      h1 
+        width : 100%
+        text-align : center
+        font-size : 180%  
+      .imgctn
+        width : 80%
+        margin : auto 
+        display : flex
+        flex-wrap : wrap 
+        img
+          object-fit : cover  
+          height : 3.5vh
+          margin-left : 6%
+          margin-bottom : 4%
+          justify-content : center 
+    .Title
+      position : relative
+      top : -50%
+      left : 70% 
+
+
 
 .badgeGreen
   @include GreenBadge()
