--- a/client/src/Styles/Colors.sass
+++ b/client/src/Styles/Colors.sass
@@ -11,4 +11,4 @@ $gold : #f5b400
 $ContBlack : #202020
 $ContBorder : #161616    
 $LightBlue: #0080c0
-$LightBlack : #3d3d3d
+$LightBlack : #313131
