--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -57,8 +57,31 @@ code
 .Links
   @include Contain()
   width : 100%
-  height : 65vh
+  height : 43vh
   margin : auto
+  display : grid
+  grid-template-columns : auto auto auto 
+  .link
+    margin : auto 
+    height : 30vh
+    width : 35vh
+    display : grid
+    grid-template-rows : 60% 40%
+    border : solid 0.4vh black 
+    background-color : $LightBlack  
+    border-radius : 1.5vh 
+    .Linkogo
+      height : 10vh
+      width : 100%
+      margin-bottom : 20%
+    .Linktxt 
+      height : 5vh
+      width : 100%
+.li
+  .Title
+    position : relative
+    top : -8.5%
+    left : 92%
 .contct
   height : 10vh
   display : flex
