--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -10,6 +10,7 @@
 @import './Styles/loading'
 @import './Styles/main'
 @import './Styles/Skills'
+@import './Styles/Links'
 
 body
   margin : 0
@@ -24,8 +25,8 @@ code
 
 .Container
   width : 70%
-  margin : auto
   height : 80vh
+  margin : auto
 
 
 .badgeGreen
@@ -49,39 +50,75 @@ code
   width : 100%
   height : 65vh
   margin : auto
+  display : grid
+  grid-template-rows : 90% 10% 
+  .slider
+    width : 100% 
+    height : 100%
+    margin : auto
+    overflow-y : hidden;
+    overflow-x : auto;
+    white-space : nowrap;
+    -webkit-overflow-scrolling : touch
+    &::-webkit-scrollbar 
+      display : none
+    .repoholder
+      display : inline-block
+      margin-top : 10%
+      margin-left : 3%
+      margin-right : 3%
+      cursor : pointer 
+      width : 27%
+      height : 40%
+      transition : 0.3s ease-in-out
+      border : 2px solid black
+      border-radius : 5% 
+      img
+        object-fit : cover 
+        width : 100%
+        height : 100%
+        border-radius : 5% 
+        transition : 0.3s ease-in-out
+      p
+        position : absolute
+        top : 0
+        left : 0
+        width : 100%
+        height : 100%
+        display : table-cell; 
+        line-height : 25vh;
+        vertical-align : middle;
+        margin : auto
+        text-align : center
+        z-index : 20
+        transition : 0.3s ease-in-out
+        background : #0000000F
+        backdrop-filter : blur(5px)
+        border-radius : 5% 
+        opacity : 0
+        text-shadow : 1px 1px 10px black; 
+      &:hover
+        p
+          color : white
+          opacity : 1
+        transform : scale(1.1)
+        filter : grayscale(80%);
+      &:active
+        p
+          color : white
+          opacity : 0.5
+        transform : scale(1.05)
+  .sub
+    width : 100%
+    text-align : center
+    margin : auto
+
 .Career
   @include Contain()
   width : 100%
   height : 65vh
   margin : auto
-.Links
-  @include Contain()
-  width : 100%
-  height : 43vh
-  margin : auto
-  display : grid
-  grid-template-columns : auto auto auto 
-  .link
-    margin : auto 
-    height : 30vh
-    width : 35vh
-    display : grid
-    grid-template-rows : 60% 40%
-    border : solid 0.4vh black 
-    background-color : $LightBlack  
-    border-radius : 1.5vh 
-    .Linkogo
-      height : 10vh
-      width : 100%
-      margin-bottom : 20%
-    .Linktxt 
-      height : 5vh
-      width : 100%
-.li
-  .Title
-    position : relative
-    top : -8.5%
-    left : 92%
+
 .contct
   height : 10vh
   display : flex
