--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -27,6 +27,7 @@ code
   width : 70%
   height : 80vh
   margin : auto
+  user-select : none
 
 
 .badgeGreen
@@ -60,6 +61,7 @@ code
     overflow-x : auto;
     white-space : nowrap;
     -webkit-overflow-scrolling : touch
+    cursor : grab 
     &::-webkit-scrollbar 
       display : none
     .repoholder
@@ -72,6 +74,7 @@ code
       transition : 0.3s ease-in-out
       border : 2px solid black
       border-radius : 5% 
+      user-select : none
       img
         object-fit : cover 
         width : 100%
@@ -83,8 +86,7 @@ code
         top : 0
         left : 0
         width : 100%
-        height : 100%
-        display : table-cell; 
+        height : 100% 
         line-height : 25vh;
         vertical-align : middle;
         margin : auto
