--- a/client/src/Styles/main.sass
+++ b/client/src/Styles/main.sass
@@ -14,111 +14,5 @@
   top : 0
   left : 0
   width : auto
-  font-size : 5vh
+  font-size : 250%
   animation : glide1 3s ease-in-out infinite
-.main
-  width : 100%
-  height : 100vh 
-  display : grid
-  grid-template-columns : 30% auto 20%  
-  .summary
-    font-size : 2vh
-    margin : auto
-    @include Contain()
-    width : 28.5vh
-    height : 60%
-    margin-right : 0
-    .imgholder
-      width : 100% 
-      height : 28.5vh
-      img
-        width : 100%
-        object-fit : cover
-      h4
-        position : relative 
-        top : -10vh
-        font-family : Hack 
-        width : 100%
-        text-align : center
-        margin-bottom : 5%
-      h3
-        position : relative 
-        top : -10vh
-        width : 90%
-        text-align : right
-        margin-top : 0
-    .placehold
-      display : flex
-      margin : auto
-      width : 100%
-      img 
-        height : 2vh
-        margin : auto
-    .badgeBlack
-      background : black
-      border : solid 0.3vh $border 
-      border-radius : 1vh
-      width : 80%
-      margin : auto
-      margin-bottom : 3%
-      p
-        text-align : center
-        margin : 2%
-    .badgeGreen
-      @include GreenBadge()
-      width : 80%
-      margin : auto
-      margin-bottom : 2%
-      p
-        text-align : center
-        margin : 2%
-    .Title
-      position : relative 
-      top : 3%
-      left : 40%
-  .bio
-    margin : auto
-    @include Contain()
-    width : 100%
-    height : 60%
-    margin-left : 10%
-    .bioctn
-      width : 85%
-      height : 100%
-      margin :  auto 
-      display : grid
-      grid-template-rows : 25% 40% 25% 10%
-      h1
-        font-size : 4vh
-        margin-top : auto
-      .textp
-        font-size : 2.5vh
-        display : flex
-        text-align : left
-        margin-top : auto
-        line-height : 200% 
-        font-family : HackL 
-      .cardholder
-        display : flex
-        width : 95%
-        animation : zoomin  2s infinite ease-in-out
-        .card
-          background : black
-          width :  11vh
-          height : 6vh
-          border-radius : 5px
-          text-align : center
-          margin : auto
-          padding : auto 
-          p
-            font-size :  1.9vh
-      .sub
-        text-align : center
-        margin : auto
-        font-size :  1.5vh
-        animation : showside  2s infinite linear
-        animation-delay : 5s 
-    .Title
-      position : relative 
-      top : -11%
-      left : 95%
