--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -11,6 +11,7 @@
 @import './Styles/main'
 @import './Styles/Skills'
 @import './Styles/Links'
+@import './Styles/Projects'
 
 body
   margin : 0
@@ -46,74 +47,6 @@ code
     text-align : center
 
 
-.Projects
-  @include Contain()
-  width : 100%
-  height : 65vh
-  margin : auto
-  display : grid
-  grid-template-rows : 90% 10% 
-  .slider
-    width : 100% 
-    height : 100%
-    margin : auto
-    overflow-y : hidden;
-    overflow-x : auto;
-    white-space : nowrap;
-    -webkit-overflow-scrolling : touch
-    cursor : grab 
-    &::-webkit-scrollbar 
-      display : none
-    .repoholder
-      display : inline-block
-      margin-top : 10%
-      margin-left : 6%
-      cursor : pointer 
-      width : 25%
-      height : 40%
-      transition : 0.3s ease-in-out
-      border : 2px solid black
-      border-radius : 5% 
-      user-select : none
-      img
-        object-fit : cover 
-        width : 100%
-        height : 100%
-        border-radius : 5% 
-        transition : 0.3s ease-in-out
-      p
-        position : absolute
-        top : 0
-        left : 0
-        width : 100%
-        height : 100% 
-        line-height : 25vh;
-        vertical-align : middle;
-        margin : auto
-        text-align : center
-        z-index : 20
-        transition : 0.3s ease-in-out
-        background : #0000000F
-        backdrop-filter : blur(5px)
-        border-radius : 5% 
-        opacity : 0
-        text-shadow : 1px 1px 10px black; 
-      &:hover
-        p
-          color : white
-          opacity : 1
-        transform : scale(1.1)
-        filter : grayscale(80%);
-      &:active
-        p
-          color : white
-          opacity : 0.5
-        transform : scale(1.05)
-  .sub
-    width : 100%
-    text-align : center
-    margin : auto
-
 .Career
   @include Contain()
   width : 100%
@@ -143,3 +76,121 @@ code
     font-family : HackL 
     margin-left :  0
     margin-right :  0
+
+
+.maincontainer
+  width : 100%
+  height : 100%
+  display : flex
+  align-items : center
+  justify-content : center
+.main
+  width : 1200px
+  height : 700px
+  margin-top : 5%
+  margin-bottom : 5%
+  display : flex
+  flex-wrap : wrap 
+  .summary
+    font-size : 100%
+    margin : auto
+    @include Contain()
+    width : 250px
+    height : 500px
+    
+    .imgholder
+      width : 100% 
+      height : 50%
+      img
+        width : 100%
+        object-fit : cover
+      h4
+        position : relative 
+        top : -30%
+        font-family : Hack 
+        width : 100%
+        text-align : center
+        margin-bottom : 5%
+      h3
+        position : relative 
+        top : -30%
+        width : 90%
+        text-align : right
+        margin-top : 0
+    .placehold
+      display : flex
+      margin : auto
+      width : 100%
+      img 
+        height : 100%
+        margin : auto
+    .badgeBlack
+      background : black
+      border : solid 3px $border 
+      border-radius : 10px
+      width : 80%
+      margin : auto
+      margin-bottom : 3%
+      p
+        text-align : center
+        margin : 2%
+    .badgeGreen
+      @include GreenBadge()
+      width : 80%
+      margin : auto
+      margin-bottom : 2%
+      p
+        text-align : center
+        margin : 2%
+    .Title
+      position : relative 
+      top : 5%
+      left : 40%
+  .bio
+    margin : auto
+    @include Contain()
+    width : 100%
+    width : 800px
+    height : 500px
+    margin-left : 10%
+    .bioctn
+      width : 85%
+      height : 100%
+      margin :  auto 
+      display : grid
+      grid-template-rows : 25% 40% 25% 10%
+      h1
+        font-size : 200%
+        margin-top : auto
+      .textp
+        font-size : 125%
+        display : flex
+        text-align : left
+        margin-top : auto
+        line-height : 250% 
+        font-family : HackL 
+      .cardholder
+        display : flex
+        width : 95%
+        animation : zoomin  2s infinite ease-in-out
+        .card
+          background : black
+          width :  15%
+          height : 40%
+          border-radius : 5px
+          text-align : center
+          margin : auto
+          padding : auto 
+          p
+            font-size : 95%
+            vertical-align : middle 
+      .sub
+        text-align : center
+        margin : auto
+        font-size :  80%
+        animation : showside  2s infinite linear
+        animation-delay : 5s 
+    .Title
+      position : relative 
+      top : -11%
+      left : 95%
