Fix : full sizing

--- a/client/src/Styles/Links.sass
+++ b/client/src/Styles/Links.sass
@@ -1,29 +1,24 @@
 .Links
   @include Contain()
-  width : 100%
-  height : 43vh
-  margin : auto
-  display : grid
-  grid-template-columns : 33% 34% 33% 
+  width : 1200px
+  height : 300px
+  display : flex
+  flex-direction : row 
+  flex-wrap : wrap
+
   .link
     margin : auto 
-    height : 30vh
-    width : 80%
+    height : 70%
+    width : 300px
     display : grid
     grid-template-rows : 60% 40%
-    border : solid 0.4vh black 
+    border : solid 5px black 
     background-color : $LightBlack  
-    border-radius : 1.5vh 
+    border-radius : 10px
     .Linkogo
-      height : 10vh
+      height : 35%
       width : 100%
-      margin-bottom : 20%
+      margin-bottom : 15%
     .Linktxt 
-      height : 5vh
+      height : 20%
       width : 100%
-.li
-  height : 65vh
-  .Title
-    position : relative
-    top : -9.5%
-    left : 92%
