--- a/client/src/Styles/Projects.sass
+++ b/client/src/Styles/Projects.sass
@@ -1,9 +1,10 @@
 
 .Projects
   @include Contain()
-  width : 100%
-  height : 65vh
-  margin : auto
+  width : 1200px
+  height : 500px
+  margin-bottom : 8%
+  font-size : 90%
   display : grid
   grid-template-rows : 90% 10% 
   .slider
@@ -35,12 +36,9 @@
         border-radius : 5% 
         transition : 0.3s ease-in-out
       p
-        position : absolute
-        top : 0
-        left : 0
+        display : none 
         width : 100%
         height : 100% 
-        line-height : 25vh;
         vertical-align : middle;
         margin : auto
         text-align : center
@@ -66,3 +64,7 @@
     width : 100%
     text-align : center
     margin : auto
+  
+.li
+  .ttt
+    top : -180px
