--- a/client/src/Styles/Skills.sass
+++ b/client/src/Styles/Skills.sass
@@ -1,24 +1,26 @@
 
 .Skills
   @include Contain()
-  width : 100%
-  height : 65vh
-  margin : auto
-  display : grid
-  grid-template-columns : 33% 33% 34%
-  font-size : 1.8vh
+  width : 1200px
+  height : 600px
+  margin-bottom : 8%
+  display : flex
+  flex-direction : row 
+  flex-wrap : wrap
+  font-size : 90%
   .one
     margin : auto
     display : flex
-    width : 100%
+    width : 33%
     height : 100%
     flex-direction : column
-    justify-content : center 
+    align-items : center
+    justify-content : center
     .litleholder
       @include Contain()
       background : $LightBlack
-      width : 30vh
-      height : 25vh 
+      width : 65%
+      height : 40%
       margin : auto
       display : flex
       flex-direction : column 
@@ -32,7 +34,7 @@
         width : 100%
         text-align : center 
         height : 70%
-        line-height : 4vh 
+        line-height : 300%
       .lngholder
         width : 100%
         margin : 1%
@@ -41,10 +43,10 @@
           font-size : 100%
           width : 50%
         p
-          line-height : 2.5vh
+          line-height : 250%
   
   .two
-    width : 100%
+    width : 33%
     height : 100%
     background : $LightBlack
     h1
@@ -62,7 +64,7 @@
         margin : auto
     .plngholder
       margin : auto
-      margin-bottom : 7%
+      margin-bottom : 8%
       display : grid
       grid-template-columns : 40% 60% 
       width : 80%
@@ -70,17 +72,18 @@
         margin : auto
       img
         object-fit : cover  
-        height : 2.5vh
+        height : 25px
       .progressbar
         width : 100%
+        height : 10px 
         display : flex 
         .bar
           width : 20%
-          height : 0.6vh
-          border-radius : 1vh 
+          height : 5px
+          border-radius : 5px
           margin-left : 1% 
   .three 
-    width : 100%
+    width : 33%
     height : 100%
     display : grid
     grid-template-rows : 50% 50% 
@@ -92,8 +95,8 @@
         width : 100%
         font-size : 160% 
       .imgctn
-        height : 20vh
-        width : 29vh
+        height : 200px
+        width : 300px
         margin : auto
         img
           width : 100%
@@ -113,12 +116,12 @@
         flex-wrap : wrap 
         img
           object-fit : cover  
-          height : 3.5vh
+          height : 40px
           margin-left : 6%
           margin-bottom : 4%
           justify-content : center 
-    .Title
-      position : relative
-      top : -50%
-      left : 70% 
+  .Title
+    position : relative
+    top : -50%
+    left : 75% 
 
