--- a/client/src/Styles/main.sass
+++ b/client/src/Styles/main.sass
@@ -1,11 +1,11 @@
 @mixin Contain()
   background : $ContBlack
-  border : solid 0.4vh $ContBorder 
+  border : solid 4px $ContBorder 
   border-radius : 2vh
   
 @mixin GreenBadge()
   background : $Green
-  border : solid 0.3vh $borderG 
+  border : solid 2px $borderG 
   border-radius : 1vh 
   margin : auto
 
@@ -16,3 +16,131 @@
   width : auto
   font-size : 250%
   animation : glide1 3s ease-in-out infinite
+
+.li
+  .Title
+    margin : auto
+    width : 1270px
+    height : 0 
+    position : relative 
+    text-align : right 
+    top : -30px
+    left : 0
+
+
+.maincontainer
+  width : 100%
+  height : 100%
+  display : flex
+  align-items : center
+  justify-content : center
+.main
+  width : 1200px
+  height : 700px
+  margin-top : 5%
+  margin-bottom : 5%
+  display : flex
+  flex-wrap : wrap 
+  .summary
+    font-size : 100%
+    margin : auto
+    @include Contain()
+    width : 250px
+    height : 500px
+    
+    .imgholder
+      width : 100% 
+      height : 50%
+      img
+        width : 100%
+        object-fit : cover
+      h4
+        position : relative 
+        top : -30%
+        font-family : Hack 
+        width : 100%
+        text-align : center
+        margin-bottom : 5%
+      h3
+        position : relative 
+        top : -30%
+        width : 90%
+        text-align : right
+        margin-top : 0
+    .placehold
+      display : flex
+      margin : auto
+      width : 100%
+      img 
+        height : 100%
+        margin : auto
+    .badgeBlack
+      background : black
+      border : solid 3px $border 
+      border-radius : 10px
+      width : 80%
+      margin : auto
+      margin-bottom : 3%
+      p
+        text-align : center
+        margin : 2%
+    .badgeGreen
+      @include GreenBadge()
+      width : 80%
+      margin : auto
+      margin-bottom : 2%
+      p
+        text-align : center
+        margin : 2%
+    .Title
+      position : relative 
+      top : 5%
+      left : 40%
+  .bio
+    margin : auto
+    @include Contain()
+    width : 100%
+    width : 800px
+    height : 500px
+    margin-left : 10%
+    .bioctn
+      width : 85%
+      height : 100%
+      margin :  auto 
+      display : grid
+      grid-template-rows : 25% 40% 25% 10%
+      h1
+        font-size : 200%
+        margin-top : auto
+      .textp
+        font-size : 125%
+        display : flex
+        text-align : left
+        margin-top : auto
+        line-height : 250% 
+        font-family : HackL 
+      .cardholder
+        display : flex
+        width : 95%
+        animation : zoomin  2s infinite ease-in-out
+        .card
+          background : black
+          width :  15%
+          height : 40%
+          border-radius : 5px
+          text-align : center
+          margin : auto
+          padding : auto 
+          p
+            font-size : 95%
+            vertical-align : middle 
+      .sub
+        text-align : center
+        margin : auto
+        font-size :  80%
+        animation : showside  2s infinite linear
+        animation-delay : 5s 
+    .Title
+      position : relative 
+      top : -10%
+      left : 95%
