--- a/client/src/Styles/Projects.sass
+++ b/client/src/Styles/Projects.sass
@@ -3,7 +3,7 @@
   @include Contain()
   width : 1200px
   height : 500px
-  margin-bottom : 8%
+  margin-bottom : 150px
   font-size : 90%
   display : grid
   grid-template-rows : 90% 10% 
@@ -67,4 +67,4 @@
   
 .li
   .ttt
-    top : -160px
+    top : -180px
