Feat : add video

--- a/client/src/Styles/main.sass
+++ b/client/src/Styles/main.sass
@@ -1,7 +1,7 @@
 @mixin Contain()
-  background : $ContBlack
-  border : solid 4px $ContBorder 
-  border-radius : 2vh
+  background : #202020a4
+  border : solid 3px $ContBorder 
+  border-radius : 20px
   
 @mixin GreenBadge()
   background : $Green
