--- a/client/src/Styles/Projects.sass
+++ b/client/src/Styles/Projects.sass
@@ -24,7 +24,7 @@
       margin-left : 6%
       cursor : pointer 
       width : 25%
-      height : 40%
+      height : 50%
       transition : 0.3s ease-in-out
       border : 2px solid black
       border-radius : 5% 
@@ -36,7 +36,10 @@
         border-radius : 5% 
         transition : 0.3s ease-in-out
       p
-        display : none 
+        position : relative
+        top : 0
+        left : 0
+        display : flex
         width : 100%
         height : 100% 
         vertical-align : middle;
@@ -54,7 +57,8 @@
           color : white
           opacity : 1
         transform : scale(1.1)
-        filter : grayscale(80%);
+        img
+          filter : grayscale(80%) blur(5px)
       &:active
         p
           color : white
