--- a/client/src/Styles/navbar.sass
+++ b/client/src/Styles/navbar.sass
@@ -5,7 +5,7 @@
   font-family : Hack
   color : white
   width : 100%
-  background : $BlackBack  
+  background : #242424da
   .navbar 
     position : fixed
     z-index : 50 
