--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -51,7 +51,6 @@ code
     margin : auto
     text-align : center
 
-
 .contct
   height : 100%
   display : flex
@@ -65,7 +64,7 @@ code
 .footer
   width : 100%
   height : 100%
-  background : black
+  background : #00000088
   display : flex
   padding-top : 2%
   padding-bottom : 2%
@@ -79,3 +78,14 @@ code
     font-family : HackL 
     margin-left :  0
     margin-right :  0
+
+.backvid
+  position : fixed
+  top : 0
+  left : 0
+  width : 100%
+  z-index : -1
+
+@media only screen and (max-device-width : 1366px)
+  body
+    background : black
