--- a/client/src/Styles/main.sass
+++ b/client/src/Styles/main.sass
@@ -1,5 +1,5 @@
 @mixin Contain()
-  background : #202020a4
+  background : $ContBlack
   border : solid 3px $ContBorder 
   border-radius : 20px
   
