--- a/client/src/Styles/Projects.sass
+++ b/client/src/Styles/Projects.sass
@@ -36,29 +36,28 @@
         border-radius : 5% 
         transition : 0.3s ease-in-out
       p
-        position : relative
+        position : absolute
+        z-index : -1
         top : 0
         left : 0
-        display : flex
         width : 100%
         height : 100% 
         vertical-align : middle;
         margin : auto
         text-align : center
-        z-index : 20
-        transition : 0.3s ease-in-out
-        background : #0000000F
-        backdrop-filter : blur(5px)
+        transition : 0.4s ease-in-out
+        background : #00000023
         border-radius : 5% 
         opacity : 0
-        text-shadow : 1px 1px 10px black; 
       &:hover
         p
           color : white
           opacity : 1
-        transform : scale(1.1)
+          z-index : 1 
+        transform : scale(1.2)
         img
-          filter : grayscale(80%) blur(5px)
+          filter : blur(5px)
+          transform : scale(0.8)
       &:active
         p
           color : white
